# ASIC-RAG-CHIMERA

./: .gitignore  ACTIVATE_ONLINE_BENCHMARKS.md  ASIC-RAG-CHIMERA_Unified.html  ASIC_RAG_Architecture.md  ASIC_RAG_CHIMERA_Paper.html  CITATION.cff  DEPLOYMENT_COMPLETE_REPORT.md  Dockerfile.benchmark  EXTERNAL_AUDIT_REPORT.md  LV06_EXPERIMENT_PLAN.md  ONLINE_BENCHMARKS_SUMMARY.md  PERFORMANCE.md  PUBLICATION_COMPLETE_GUIDE.md  PUBLICATION_SUCCESS_REPORT.md  README.md  README_HF.md  READY_TO_PUBLISH.md  __init__ (1).py  api_reference.md  architecture.md  asic_rag_chimera.py  benchmarks.md  chimera_chronos_reference.py  cli.py  default_config.yaml  fix_kaggle_auth.py  online_benchmarks_setup.py  publication_toolkit.py  publish_research.py  pyproject.toml  render_compute.py  requirements.txt  security_model.md  submit_to_huggingface.py  texture_memory.py  upload_summary.txt  verify_ready_to_publish.py
ASIC-RAG-HEALTH Validation/: Seid-Mehammed-Abdu-CUDA-Accelerated_Proof-of-Work_in_Healthcare_Block.txt  exp_phase2_ULTIMATE_BENCHMARK.py  health_config.py  ultimate_benchmark_results.json
ASIC-RAG-HEALTH_Validation/: ASIC-RAG-HEALTH Validation.md  ASIC_RAG_Healthcare_LLM_Paper.html  GPU_VS_ASIC_COMPARISON.md  PHASE_2_FIELD_REPORT.md  README_PHASE_2.md  demo_full_medical_workflow.py  exp_phase2_01_clinic_power.py  exp_phase2_02_daily_workload.py  exp_phase2_04_paper_head_to_head.py  exp_phase2_ULTIMATE_BENCHMARK.py  health_config.py  medical_bridge.py  ultimate_benchmark_results.json
Luck-Miner_LV06/: API_EXAMPLES.md  README.md  test_simple.py
REAL_DATA_LV06/: SCIENTIFIC_INTEGRITY_REPORT.md  check_api.py  check_api_json.py  chimera_definitive_validation.py  debug_stratum.py  exp_02_reservoir_entropy.py  (+5 more)
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/: README.md  pyproject.toml
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/src/chimera_handoff/: schema.py
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/src/chimera_handoff/cli/: pc_chronos_sweep.py  verify.py
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/src/chimera_handoff/entropy/: chronos_event_types.py  chronos_surrogates.py  fingerprint.py  float_contexts.py  float_surrogates.py  profile.py  sources.py  thermal_model.py  thermal_telemetry.py
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/src/chimera_handoff/experiments/: __init__.py  compare_run_roots.py  compute_did.py  ingest_pc_chronos_raw.py  interventions.py  sweep_pc_chronos.py  thermal_stream_pipeline.py
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/src/chimera_handoff/pipeline/: dmd.py  heyting.py  ratchet.py
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/src/chimera_handoff/system/: __init__.py  report.py
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/src/chimera_handoff/util/: manifest.py  paths.py
REAL_DATA_LV06/chimera_handoff/chimera_handoff/python/tests/: test_decision_v0_2_synthetic.py  test_schema_validation.py  test_surrogates_span_safe.py
(+973 files in other folders)
